# agentic-sandbox

./: .gitignore  .golangci.yml  .spectral.yaml  AGENTS.md  AIWG.md  ARTIFACT_STREAMING_IMPLEMENTATION.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CLEANUP_IMPLEMENTATION_SUMMARY.md  Dockerfile.dev  GO_IMPLEMENTATION_SUMMARY.md  GO_README.md  IMPLEMENTATION_RESOURCE_LIMITS.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  RECONCILIATION_IMPLEMENTATION.md  RESOURCE_LIMITS_CHANGES.md  RESOURCE_LIMITS_IMPLEMENTATION_FINAL.md  ROOTLESS_DOCKER_IMPLEMENTATION.md  RUN_TESTS.sh  SETUP_SUMMARY.md  TEST_SUMMARY.md  TEST_VERIFICATION.md  docker-compose.dev.yaml  go.mod  go.sum  send_command.py  test-script.sh  test_ws_command.py
.aiwg/: .last-doc-sync  .milestones.json  AIWG.md  aiwg.config  release.config
agent/: README.md  __init__.py  grpc_client.py  requirements.txt
agent-rs/: CLAUDE_RUNNER_IMPLEMENTATION.md  Cargo.toml  README.md  RELIABILITY_IMPLEMENTATION.md  build.rs
agent-rs/.aiwg/ralph/: completion-20260125.md
agent-rs/scripts/: verify-agent-health.sh
agent-rs/src/: claude.rs  credentials.rs  health.rs  lib.rs  main.rs  metrics.rs  metrics_exporter.rs
agent-rs/systemd/: agent-client.service
agent-rs/tests/: session_cleanup_test.rs  stdin_task_no_deadlock.rs
agents/: example-agent.yaml
api/: openapi.yaml
ci/: digests.txt  npm-pins.txt  openbao-fetch.sh
cli/: Cargo.toml  README.md  build.rs
cli/src/: config.rs  main.rs
cli/src/audit/: mod.rs
cli/src/client/: http.rs  mod.rs  models.rs  pty_ws_v1.rs  sse.rs  ws.rs
cli/src/cmd/: agent.rs  container.rs  event.rs  health.rs  hitl.rs  loadout.rs  mod.rs  ops.rs  session.rs  ssh.rs  storage.rs  task.rs  tui.rs  vm.rs
cli/src/commands/: agentcard.rs  agents.rs  attach.rs  exec.rs  logs.rs  mod.rs  server.rs  tasks.rs  vm.rs
cli/src/output/: kv.rs  mod.rs  table.rs
cli/src/pty/: mod.rs
cli/tests/: ssh_gateway.rs
configs/: SECCOMP.md  nginx.conf  seccomp-agent.json  seccomp-profile.json  (+1 more)
deploy/: README.md  (+2 more)
management/: ALERTING_IMPLEMENTATION.md  Cargo.toml  MULTI_AGENT_IMPLEMENTATION.md  PHASE3_QUICK_REFERENCE.md  README.md  VAULT_INTEGRATION.md  VM_CONTROL_API_IMPLEMENTATION.md  VM_CONTROL_API_PHASE2_IMPLEMENTATION.md  VM_CONTROL_API_PHASE_3_IMPLEMENTATION.md  VM_POOL_IMPLEMENTATION.md  build.rs  dev.sh  test-dev-build-freshness.sh
management/agentic-sandbox-executor/: Cargo.toml
management/agentic-sandbox-executor/src/: agent_card.rs  instance.rs  lib.rs  server.rs
management/agentic-sandbox-executor/src/auth/: mod.rs
management/agentic-sandbox-executor/src/bindings/: agent_pty_bridge.rs  message_dispatch.rs  mod.rs  pty_bridge.rs  pty_ws.rs  rest.rs
management/agentic-sandbox-executor/src/extensions/: hitl_prompt.rs  idempotency.rs  mod.rs  multi_tenant.rs  pty_extensions.rs  runtime.rs
management/agentic-sandbox-executor/src/handlers/: artifacts.rs  cancel_task.rs  get_extended_agent_card.rs  get_task.rs  jwks.rs  list_tasks.rs  mod.rs  push_delivery.rs  push_notification.rs  send_message.rs  send_streaming_message.rs  subscribe_to_task.rs
management/agentic-sandbox-executor/src/store/: idempotency.rs  mod.rs  task_store.rs
management/agentic-sandbox-executor/tests/: smoke.rs
management/docs/: multi-agent-orchestration.md
management/docs/api/: vm-control-phase2.md  vm-control.md
management/examples/: artifact_streaming.rs  phase3_integration.rs  reconciliation_usage.rs
management/src/: agent_message_dispatch.rs  agent_pty_bridge.rs  aiwg_serve.rs  auth.rs  bootstrap_enrollment.rs  config.rs  crash_loop.rs  credentials.rs  docker_runtime.rs  grpc.rs  grpc_ca_backend.rs  grpc_local_ca.rs  heartbeat.rs  hitl.rs  host_runtime.rs  identity.rs  lib.rs  libvirt_events.rs  main.rs  prompt_detector.rs  registry.rs  runtime_bootstrap.rs  screen_state.rs  ssh_gateway.rs  ssh_gateway_connector.rs  startup_executor.rs  startup_profiles.rs  systemd.rs  transport_identity.rs
management/src/aiwg_serve/: migration.rs  mod.rs  task_store.rs
management/src/audit/: audit.rs  mod.rs  secrets_rotation.rs
management/src/dispatch/: dispatcher.rs  mod.rs
management/src/http/: admin_v2.rs  agent_chat.rs  agent_output.rs  aiwg_proxy.rs  bootstrap_enrollment.rs  compat_v1.rs  container_images.rs  containers.rs  credential_proxy.rs  credentials.rs  dispatch.rs  events.rs  health.rs  hitl.rs  idempotency.rs  loadout_registry.rs  loadouts.rs  logs.rs  mod.rs  operations.rs  operator_auth.rs  orchestrate.rs  rate_limit.rs  server.rs  sessions.rs  ssh_gateway.rs  startup_profiles.rs  storage.rs  tasks.rs  tls_listener.rs  uds.rs  validation.rs  vms.rs  vms_extended.rs
management/src/orchestrator/: RETRY_USAGE.md  TIMEOUTS.md  alerting.rs  artifacts.rs  audit.rs  checkpoint.rs  circuit_breaker.rs  cleanup.rs  collector.rs  degradation.rs  executor.rs  hang_detection.rs  manifest.rs  mod.rs  monitor.rs  multi_agent.rs  reconciliation.rs  retry.rs  secrets.rs  slo.rs  storage.rs  task.rs  timeouts.rs  vm_pool.rs
management/src/output/: aggregator.rs  chat_projection.rs  mod.rs
management/src/session/: mod.rs  redaction.rs  registry.rs  replay.rs  transcript.rs
management/src/telemetry/: log_buffer.rs  logging.rs  metrics.rs  mod.rs  otel.rs  trace_id.rs
management/src/ws/: connection.rs  hub.rs  mod.rs
management/systemd/: agentic-host-runtime-daemon.service  agentic-mgmt.service
management/tests/: e2e_agent_registration.rs  e2e_command_dispatch.rs  e2e_concurrent_agents.rs  e2e_resource_limits.rs  e2e_server_health.rs  native_vsock_tonic_spike.rs  rustls_hot_reload_spike.rs
management/tests/e2e_support/: mod.rs
management/tests/fixtures/: fake-provision-vm-fail.sh  fake-provision-vm.sh
management/ui/: app.js  index.html  styles.css
management/ui/test/: api-client.test.html  tui-redraw-stress.test.html
sdk/python/: .gitignore  IMPLEMENTATION.md  Makefile  README.md  pyproject.toml  setup.cfg
sdk/python/agentic_sandbox/: __init__.py  client.py  exceptions.py  models.py
sdk/python/examples/: basic_usage.py
sdk/python/tests/: __init__.py  conftest.py  test_client.py  test_models.py
(+622 files in other folders)
