[package]
name = "agent-client"
version = "0.1.0"
edition = "2021"
description = "Rust gRPC client for agentic sandbox agents"
authors = ["roctinam"]

[lib]
name = "agent_client"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal", "process"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# System info
sysinfo = "0.32"
hostname = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
futures = "0.3"
chrono = "0.4"
serde_json = "1"

# PTY support
nix = { version = "0.29", features = ["term", "process", "signal", "fs"] }
libc = "0.2"

# Systemd integration (optional - gracefully degrades on non-systemd systems)
sd-notify = { version = "0.4", optional = true }

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "agent-client"
path = "src/main.rs"

[features]
default = ["systemd"]
systemd = ["sd-notify"]

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
strip = true
