[package]
name = "agent-client"
version = "2026.6.1"
edition = "2021"
description = "Rust gRPC client for agentic sandbox agents"
authors = ["roctinam"]
license = "AGPL-3.0-only"

[lib]
name = "agent_client"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "signal", "process"] }

# gRPC
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"
tower = { version = "0.4", features = ["util"] }
hyper-util = { version = "0.1", features = ["tokio"] }
hyper = "1"
tokio-vsock = { version = "0.7.2", features = ["tonic012"] }

# Serialization
serde = { version = "1", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# System info
sysinfo = "0.32"
hostname = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# Utilities
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
futures = "0.3"
chrono = "0.4"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rcgen = "0.13"

# PTY support
nix = { version = "0.29", features = ["term", "process", "signal", "fs"] }
libc = "0.2"

# Systemd integration (optional - gracefully degrades on non-systemd systems)
sd-notify = { version = "0.4", optional = true }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "agent-client"
path = "src/main.rs"

[features]
default = ["systemd"]
systemd = ["sd-notify"]

[profile.release]
opt-level = "z"  # Optimize for size
lto = true
codegen-units = 1
strip = true
