[package]
name = "agentic-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for agentic-sandbox VM management"
authors = ["roctinam"]

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC client
tonic = "0.12"
prost = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Terminal output
colored = "2"
indicatif = "0.17"

# Utilities
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Config
dirs = "5"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "agentic-sandbox"
path = "src/main.rs"
