[package]
name = "agentic-cli"
version = "2026.6.21"
edition = "2021"
description = "CLI for agentic-sandbox VM management"
authors = ["roctinam"]
license = "AGPL-3.0-only"
build = "build.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC client
tonic = "0.12"
prost = "0.13"

# Logging
tracing = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# HTTP client (REST + SSE)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
bytes = "1"

# Terminal output
colored = "2"
indicatif = "0.17"

# WebSocket client — rustls so we cross-compile cleanly (#311); webpki-roots
# bundles trust anchors so no system trust store dependency.
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake", "rustls-tls-webpki-roots"] }
futures-util = "0.3"

# TTY raw mode for `session attach`
crossterm = "0.28"

# base64 for decoding SessionFrame payload data
base64 = "0.22"

# regex for `event tail --filter`
regex = "1"

# Utilities
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Config
dirs = "5"

# Ed25519 verify + JCS canonicalization for `agentcard verify`.
# Minimal JWS verifier — only the AgentCard shape (EdDSA / OKP / Ed25519).
ed25519-dalek = "2"
serde_jcs = "0.2"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand = "0.8"

[build-dependencies]
tonic-build = "0.12"

[[bin]]
name = "sandboxctl"
path = "src/main.rs"

# Compatibility alias — same binary, old name. Drop after deprecation window.
[[bin]]
name = "agentic-sandbox"
path = "src/main.rs"
