[package]
name = "agentic-management"
version = "0.1.0"
edition = "2021"
description = "High-performance management server for agentic sandbox VMs"
authors = ["roctinam"]

[dependencies]
# Async runtime - multi-threaded by default
tokio = { version = "1", features = ["full", "tracing"] }

# gRPC
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"

# Configuration
config = "0.14"

# Utilities
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"  # Concurrent hashmap for agent registry
parking_lot = "0.12"  # Fast synchronization primitives
bytes = "1"
regex = "1"  # For input validation

# Secret handling
rand = "0.8"
hex = "0.4"
sha2 = "0.10"

# HTTP client for Vault
reqwest = { version = "0.12", features = ["json"] }

# libvirt bindings for VM lifecycle events
virt = "0.4"
libc = "0.2"

# WebSocket for UI (optional)
tokio-tungstenite = "0.24"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

# Task orchestration
serde_yaml = "0.9"
async-trait = "0.1"
notify = "6"
glob = "0.3"

# HTTP server for web dashboard
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }
rust-embed = "8"
mime_guess = "2"
hyper = "1"
http-body-util = "0.1"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
wiremock = "0.6"

[lib]
name = "agentic_management"
path = "src/lib.rs"

[[bin]]
name = "agentic-mgmt"
path = "src/main.rs"

[features]
default = []
# Enable Prometheus metrics exporter (alternative to builtin)
prometheus = ["metrics", "metrics-exporter-prometheus"]
# Enable OpenTelemetry distributed tracing
otel = ["tracing-opentelemetry", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]

[dependencies.metrics]
version = "0.24"
optional = true

[dependencies.metrics-exporter-prometheus]
version = "0.16"
optional = true

[dependencies.tracing-opentelemetry]
version = "0.28"
optional = true

[dependencies.opentelemetry]
version = "0.27"
optional = true

[dependencies.opentelemetry_sdk]
version = "0.27"
features = ["rt-tokio"]
optional = true

[dependencies.opentelemetry-otlp]
version = "0.27"
features = ["tonic"]
optional = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
