[workspace]
members = [".", "agentic-sandbox-executor"]

[package]
name = "agentic-management"
version = "2026.6.30"
edition = "2021"
description = "High-performance management server for agentic sandbox VMs"
authors = ["roctinam"]
license = "AGPL-3.0-only"

[dependencies]
# Async runtime - multi-threaded by default
tokio = { version = "1", features = ["full", "tracing"] }

# gRPC
tonic = { version = "0.12", features = ["tls"] }
prost = "0.13"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Logging/tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
sd-notify = "0.4"

# Configuration
config = "0.14"

# Utilities
anyhow = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "v7"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"
dashmap = "6"  # Concurrent hashmap for agent registry
parking_lot = "0.12"  # Fast synchronization primitives
bytes = "1"
base64 = "0.22"
regex = "1"  # For input validation

# Secret handling
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
subtle = "2"  # Constant-time byte comparison for credential verification (#264)

# HTTP client for Vault — explicit rustls + webpki roots (no native-tls)
# so we cross-compile cleanly (#311). default-features disabled to drop the
# implicit default-tls = native-tls.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# libvirt bindings for VM lifecycle events
virt = "0.4"
libc = "0.2"

# WebSocket for UI (optional)
tokio-tungstenite = "0.24"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["net", "sync"] }
async-stream = "0.3"

# Task orchestration
serde_yaml = "0.9"
async-trait = "0.1"
notify = "6"
glob = "0.3"
tempfile = "3"

# SQLite for v2 A2A TaskStore (#205)
rusqlite = { version = "0.32", features = ["bundled"] }

# JCS RFC 8785 canonicalization for idempotency cache (#206)
serde_jcs = "0.2"

# CLI parsing for v1→v2 migration tool (#207)
clap = { version = "4", features = ["derive", "env"] }

# HTTP server for web dashboard
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors", "timeout"] }
rust-embed = "8"
mime_guess = "2"
hyper = "1"
hyper-util = { version = "0.1", features = ["tokio", "server", "http1"] }
http-body-util = "0.1"
vt100 = "0.16.2"

# mTLS listener for admin API (#238). axum-server's tls-rustls feature
# wraps rustls + tokio-rustls with axum-friendly Server type. We
# explicitly enable the `ring` crypto provider since 0.23 made provider
# selection a runtime requirement.
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2"
tokio-rustls = "0.26"
# x509 parsing for subject CN extraction from the verified client cert.
x509-parser = "0.16"
# Native AF_VSOCK transport for the internal agent gRPC plane (#409).
tokio-vsock = { version = "0.7.2", features = ["tonic012"] }
# In-process local CA for the gRPC mTLS TCP fallback path (#409 / ADR-025).
rcgen = { version = "0.13", features = ["x509-parser"] }

# v2 executor crate (#243). #243 moved TaskStore + IdempotencyCache into this
# crate so the management binary can mount the executor's REST router under
# `/agents/*` without a workspace cycle. The bridge that crosses the seam in
# the other direction (`AgentPtyBridge`) lives in this crate at
# `src/agent_pty_bridge.rs` because it needs management's AgentRegistry +
# CommandDispatcher + proto types.
agentic-sandbox-executor = { path = "agentic-sandbox-executor" }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
wiremock = "0.6"
# Rustls cert hot-reload spike for ADR-027 / issue #407.
arc-swap = "1"

[lib]
name = "agentic_management"
path = "src/lib.rs"

[[bin]]
name = "agentic-mgmt"
path = "src/main.rs"

[[bin]]
name = "vm-event-bridge"
path = "src/bin/vm-event-bridge.rs"

[features]
default = []
# Enable Prometheus metrics exporter (alternative to builtin)
prometheus = ["metrics", "metrics-exporter-prometheus"]
# Enable OpenTelemetry distributed tracing
otel = ["tracing-opentelemetry", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]

[dependencies.metrics]
version = "0.24"
optional = true

[dependencies.metrics-exporter-prometheus]
version = "0.16"
optional = true

[dependencies.tracing-opentelemetry]
version = "0.28"
optional = true

[dependencies.opentelemetry]
version = "0.27"
optional = true

[dependencies.opentelemetry_sdk]
version = "0.27"
features = ["rt-tokio"]
optional = true

[dependencies.opentelemetry-otlp]
version = "0.27"
features = ["tonic"]
optional = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
